[project]
name = "cedar-mcp"
version = "1.0.0"
description = "A CEDAR MCP server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Josef Hardi"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastmcp",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "requests>=2.28.0",
]

[project.scripts]
cedar-mcp = "cedar_mcp.server:main"

[project.urls]
Homepage = "https://github.com/musen-lab/cedar-mcp"
Repository = "https://github.com/musen-lab/cedar-mcp"
Issues = "https://github.com/musen-lab/cedar-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cedar_mcp"]
